--- a/css/main.css
+++ b/css/main.css
@@ -3,185 +3,125 @@
 }
 body{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size:15px;
-	line-height:1.5;
 	padding:0;
 	margin:0;
-	background-color:#f4f4f4;
-}
-/* Global */
-.container{
-    width:80%;
-    margin:auto;
-    overflow:hidden;
-}
-ul{
-    margin:0;
-    padding:0
-}
-/*****HEADER*****/
-
-
-header {
-	background: #f26651;
-	padding-top:15px;
-	min-height:70px;
 }
 
-header a{
-    color:#ffffff;
-    text-decoration:none;
-    text-transform:uppercase;
-    font-size:16px;
+/*****NAVIGATION-SECTION****/
+
+nav{
+    background-color: #f26651;
 }
 
+/*.nav:after {
+    content: '';
+    display: block;
+    clear: both;
+}*/
 
-header li{
-    float:left;
-    display:inline;
-    padding: 0 20px 0 20px;
+.logo {
+    float: left;
+    margin: 16px 0 16px 50px;
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 900; 
 }
-header #logo span{
+
+.menu {
+    float: right;
+    margin: 0;
+    margin-top: 16px;
+    margin-right: 30px;
+}
+
+.menu ul {
+   list-style: none;
+   padding-left: 0px;
+   margin: 0;
+}
+
+.menu ul li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    padding: 20px 10px 20px 10px; 
+}
+
+.menu ul li a:hover {
+    background-color: aqua;
     color: white;
-}
-header #logo{
-    float:left;
+    transition: all 0 5s ease;
 }
 
-header #logo h1{
-    margin:0;
+/****HEADER****/
+header {
+    background-image: url('../img/bali-hero2.jpg');
+    height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat; 
 }
 
-header nav{
-    float:right;
-    margin-top:10px;
-}
-    
-header .highlight, header .current a{
-    color:#e8491d;
-    font-weight:bold;
+header p {
+    margin: 0;
 }
 
-header a:hover{
-    color:#cccccc;
-    font-weight:bold;
+.hero-container {
+    text-align: center;
+    padding-top: 100px;
 }
 
-/****HERO-MAIN****/
-#hero-main{
-    min-height:600px;
-    background:url("../img/bali-hero2.jpg") no-repeat;
-    background-size: 100%;
-    opacity: 0.9;
-    text-align:center;
-    color:#ffffff;
-}
-#hero-main h1{
-    margin-top:100px;
-    font-size:55px;
-    margin-bottom:10px;
+.btn-journey {
+    background-color: orange;
+    display: inline-block;
+    padding: 10px 25px;
+    color: white;
+    margin: 15px 10px;
+    font-weight: bold;
+    border-radius: 20px;
+    text-decoration: none;
 }
 
+.btn-journey a {
+    background-color: tomato;
+    display: inline-block;
+    padding: 10px 25px;
+    color: white;
+    margin: 15px 10px;
 
-#hero-main .container{
-    background: black;
-    opacity: 0.5;
-    
 }
 
-.button-classes{
-        height: 50px;
-		background:#e8491d;
-		border:0;
-		padding-left: 20px;
-		padding-right: 20px;
-        color:#ffffff;
-        text-decoration: none;
-        padding-top: 10px;
-        padding-bottom: 10px;
-}
+/****CLASS-SCHEDULE****/
 
-/****CLASSES-SCHEDULE****/
 .class-schedule{
-    background-color: lightblue;
-}
-
-.classes-title{
+    background-color: grey;
+    padding-top: 50px;
+    padding-bottom: 50px;
     text-align: center;
 }
-.classes-box .class box{
-   
-    float:left;
+
+.class-schedule .class-ctn {
+    display: flex;
+    justify-content: space-around;
+}
+
+.class-schedule .class {
+    background-color: white;
+    width: 20%;
+}
+
+.class-schedule .class img {
+    width: 40px;
+}
+
+/****ADVERT****/
+.advert{
+    background-image: url('../img/bali-hero.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
     text-align: center;
-    width: 30%;
-    padding: 10px;
-}
-.classes-box .box img {
-    height:25px;
-    width:30px;
-    display: flex;
-}
- .container .classes-box{
-    display: flex;
-    justify-content: space-between;
 }
 
-/****HERO-ADVERT****/
-
-.hero-advert .advert-container{
-        background-image: url(../img/bali-hero.jpg);
-        background-size: cover;
-        background-position: center;
-        padding: 10em 0;
-        
-    }
-
-/****TRAINERS****/
-    .trainers-container{
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        
-        -ms-box-orient: horizontal;
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -moz-flex;
-        display: -webkit-flex;
-        display: flex;
-        flex-wrap: wrap;
-       
-    }
-   
-.trainers-container .trainer1{
-    background-image: url(..img/trainer1.jpg);
-    width: 30%;
-
-}
-.trainers-container .trainer2{
-    background-image: url(..img/trainer2.jpg);
-} 
-.trainers-container .trainer3{
-    background-image: url(..img/trainer3.jpg);
-}
-.trainers-container .trainer4{
-    background-image: url(..img/trainer4.jpg);
-}
-.trainers-container .trainer5{
-    background-image: url(..img/trainer5.jpg);
-}
-.trainers-container .trainer6{
-    background-image: url(..img/trainer6.jpg);
-}
-
-
-
-
-.advert2-container{
-        background-image: url(../img/advertise3.jpg);
-        background-size: cover;
-        background-position: center;
-        padding: 10em 0;
-        
-    }
-   
