--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ header {
     height: 500px;
     background-size: cover;
     background-repeat: no-repeat; 
+    position: relative;
 }
 
 header p {
@@ -71,8 +72,15 @@ header p {
 
 .hero-container {
     text-align: center;
-    padding-top: 100px;
+    /* padding-top: 20px; */
+    top: 80px;
+    right: 80%;
+    /* height: 100px; */
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    padding: 20px;
 }
+
 
 .btn-journey {
     background-color: orange;
