--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,46 @@
 *{
     box-sizing: border-box;
 }
-body{
-	font-family: Arial, Helvetica, sans-serif;
-	padding:0;
-	margin:0;
+h1, h2, h3, h4, h5, h6, {
+    
+    font-family: "Roboto", Arial, sans-serif;
+}
+body {
+    margin: 0;
+}
+nav {
+    background-color: rgb(0, 0, 0);
+    height: 60px;
 }
 
-/*****NAVIGATION-SECTION****/
-
-nav{
-    background-color: #f26651;
-    height: 50px;
-}
-
-/*.nav:after {
-    content: '';
-    display: block;
-    clear: both;
-}*/
 
 .logo {
-    float: left;
-    margin: 16px 0 16px 50px;
-    color: #333;
-    text-transform: uppercase;
-    font-weight: 900; 
+    padding-left: 25px;
+    padding-top: 20px;
+    
+}
+
+.logo b {
+    color: white;
+}
+.logo i {
+    color: red;
+}
+.logo .menu {
+    display: inline-block;
+    margin: 20px;
 }
 
 .menu {
     float: right;
-    margin: 0;
-    margin-top: 16px;
-    margin-right: 30px;
+    margin-top: -18px;
+    
 }
 
 .menu ul {
-   list-style: none;
-   padding-left: 0px;
-   margin: 0;
+    list-style: none;
+    padding-left: 0px;
+    margin: 0;
 }
 
 .menu ul li {
@@ -48,142 +50,94 @@ nav{
 
 .menu ul li a {
     text-decoration: none;
-    padding: 20px 10px 20px 10px; 
-}
-
-.menu ul li a:hover {
-    background-color: aqua;
+    padding: 20px 15px;
     color: white;
-    transition: all 0 5s ease;
 }
 
-/****HEADER****/
+/* -----------HEADER SECTION-----*/
+
 header {
-    background-image: url('../img/bali-hero2.jpg');
+    background-image: url(../img/bali-hero2.jpg);
     height: 500px;
     background-size: cover;
-    background-repeat: no-repeat; 
-    position: relative;
 }
 
-header p {
+header h1 {
     margin: 0;
-}
-
-.hero-container {
-    text-align: center;
-    /* padding-top: 20px; */
-    top: 80px;
-    right: 80%;
-    /* height: 100px; */
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    padding: 20px;
-}
-
-
-.btn-journey {
-    background-color: orange;
-    display: inline-block;
-    padding: 10px 25px;
+    margin-bottom: 30px;
     color: white;
-    margin: 15px 10px;
-    font-weight: bold;
-    border-radius: 20px;
-    text-decoration: none;
 }
 
-.btn-journey a {
-    background-color: tomato;
-    display: inline-block;
-    padding: 10px 25px;
+.title-ctn a {
     color: white;
-    margin: 15px 10px;
+    padding-top: 10px;
+    background-color: dodgerblue;
+    padding: 12px;
+    border-radius: 25px;
+    font-size: 1rem;
+}
+.title-ctn a:hover{
+    color:dodgerblue;
+    background-color: white;
+    border-color: dodgerblue;
+    border-width: 50px;
+}
+header .title-ctn {
+    font-size: 1.5rem;
+    margin-left: 5rem;
+    margin-top: 10rem;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding-top: 10vh;
+    padding-left: 5vw;
+    padding-bottom: 10vh;
+    padding-right: 5vw;
+    display: inline-block;
+}
+/*-----CLASS SCHEDULE ------*/
 
+.class-schedule h2 {
+    padding-left: 40vw;
+    margin-top: 75px;
+}
+.class-schedule span {
+    padding-left: 35vw;
 }
 
-/****CLASS-SCHEDULE****/
-
-.class-schedule{
-    background-color: grey;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
+.class-schedule .class1 img, .class2 img,
+.class3 img, .class4 img
+ {
+    width: 35px;
 }
 
 .class-schedule .class-ctn {
     display: flex;
     justify-content: space-around;
+    margin-top: 50px;
 }
 
-.class-schedule .class {
-    background-color: white;
-    width: 20%;
-}
+/* ------ADVERT1----- */
 
-.class-schedule .class img {
-    width: 40px;
-}
-
-/****ADVERT****/
-.advert{
-    background-image: url('../img/bali-hero.jpg');
-    background-repeat: no-repeat;
+.advert1 {
+    background-image: url(../img/bali-hero.jpg);
+    height:500px;
     background-size: cover;
-    height: 450px;
-    text-align: center;
 }
 
-/***TRAINERS****/
+/* ------TRAINERS------- */
 
+.trainers-details{
+    display: flex;
+   
+    flex-wrap: wrap;
+  
+}
 
-
-.trainers-ctn .trainer1 {
-    background-image: url("../img/trainer1.jpg");
+.box {
     background-size: cover;
     background-repeat: no-repeat;
-    height: 450px;
+    height: auto;
+    width: 30%;
+}
     
-}
 
-.trainers-ctn .trainer2 {
-    background-image: url("../img/trainer2.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 450px;
-}
 
-.trainers-ctn .trainer3 {
-    background-image: url("../img/trainer3.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 450px;
-}
-
-.trainers-ctn .trainer4 {
-    background-image: url("../img/trainer4.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 450px;
-}
-
-.trainers-ctn .trainer5 {
-    background-image: url("../img/trainer5.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 450px;
-}
-
-.trainers-ctn .trainer6 {
-    background-image: url("../img/trainer6.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 450px;
-}
-
-/****ADVERT****/
-.advert2 {
-    background-image: url("../img/advertise3.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
